# ChatVault

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  plan copy.md  plan.md  pyproject.toml  requirements.txt  run.sh  stop.sh
.github/workflows/: ci.yml
.streamlit/: config.toml
chatvault/: __init__.py  api.py  app.py  config.py  db.py  embeddings.py  export.py  ingest.py  onboarding.py  rag.py  reranker.py  search.py  security.py
chatvault/connectors/: TEMPLATE.py  __init__.py  base.py  claude.py
chatvault/llm/: __init__.py  base.py  claude.py  ollama.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: ActionBar.tsx  ChatInput.tsx  ChatMessage.tsx  LeftPanel.tsx  RightPanel.tsx  SettingsPopover.tsx  SetupWizard.tsx  ThreadView.tsx
frontend/src/styles/: app.css
memory-bank/: decisions.md  session-state.md
memory-bank/progress/: phase-0.md  phase-1.md  phase-10.md  phase-11.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md  phase-9.md
tests/: conftest.py  test_connectors.py  test_db.py  test_embeddings.py  test_ingest.py  test_rag.py  test_search.py  test_security.py
tests/fixtures/sample-data/: memories.json  projects.json  users.json
